remove old address input

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
               <label for="new-last-name">Last name</label>
               <input type="text" class="form-control" id="new-last-name">
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
               <label for="new-address">address</label>
               <input type="text" class="form-control" id="new-address">
-            </div>
+            </div> -->
             <div class="form-group">
               <label for="new-email">email</label>
               <input type="text" class="form-control" id="new-email">
@@ -46,7 +46,6 @@
 
             <p>First name: <span class="first-name"></span></p>
             <p>Last name: <span class="last-name"></span></p>
-            <p>Address: <span class="address"></span></p>
             <p>Email: <span class="email"></span></p>
           </div>
         </div>
