--- a/index.html
+++ b/index.html
@@ -23,14 +23,28 @@
               <label for="new-last-name">Last name</label>
               <input type="text" class="form-control" id="new-last-name">
             </div>
-            <!-- <div class="form-group">
-              <label for="new-address">address</label>
-              <input type="text" class="form-control" id="new-address">
-            </div> -->
+            <div id="new-addresses">
+              <div class="new-address">
+                <div class="form-group">
+                  <label for="new-street">Street</label>
+                  <input type="text" class="form-control" id="new-street">
+                </div>
+                <div class="form-group">
+                  <label for="new-city">City</label>
+                  <input type="text" class="form-control new-city">
+                </div>
+                <div class="form-group">
+                  <label for="new-state">State</label>
+                  <input type="text" class="form-control new-state">
+                </div>
+              </div>
+            </div>
             <div class="form-group">
               <label for="new-email">email</label>
               <input type="text" class="form-control" id="new-email">
             </div>
+
+            <span class="btn btn-primary" id="add-address">Another address</span>
 
             <button type="submit" class="btn">Add</button>
           </form>
@@ -47,6 +61,10 @@
             <p>First name: <span class="first-name"></span></p>
             <p>Last name: <span class="last-name"></span></p>
             <p>Email: <span class="email"></span></p>
+            <p>Adresses:</p>
+            <ul id="addresses">
+
+            </ul>
           </div>
         </div>
       </div>
