--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               <div class="new-address">
                 <div class="form-group">
                   <label for="new-street">Street</label>
-                  <input type="text" class="form-control" id="new-street">
+                  <input type="text" class="form-control new-street">
                 </div>
                 <div class="form-group">
                   <label for="new-city">City</label>
